--- a/index.html
+++ b/index.html
@@ -356,7 +356,7 @@ button:active {
 }
 
 img.questionImg {
-  max-width: 100%;
+  max-width:95vw;
   border-radius: 10px;
   /* Prevent image dragging and selection */
   -webkit-user-drag: none;
